Prevent extra spaces in form with errors

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,6 +60,7 @@ nav li:hover:not(.active) {
 }
 
 .field_with_errors {
+    display: inline; # Fixes form with errors spacing issue
   @extend .has-error;
   .form-control {
     color: $state-danger-text;
